[package]
name = "pr-worktree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.3", features = ["derive"] }
clap_complete = "4.5.1"
clap_mangen = "0.2.20"
colored = "2.1.0"
confy = "0.6.1"
dirs = "5.0.1"
ignore = "0.4.22"
once_cell = "1.19.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
thiserror = "1.0.58"
toml = "0.8.12"
